@@ -1,7 +1,6 @@
 #!/bin/sh
 
-cd ..
-test -f MANIFEST || exec echo "must be started in plug-ins/perl/po"
+test -f ../MANIFEST || exec echo "must be started in plug-ins/perl/po"
 
-./pxgettext `find . -name '*.pm' -o -name '*.xs' -o -path './examples/*'` Perl-Server > po/gimp-perl.pot
+make update-po
 
